--- a/src/components/Notifications/Notifications.scss
+++ b/src/components/Notifications/Notifications.scss
@@ -1,4 +1,5 @@
 @import 'src/styles/variables';
 .Notifications {
     display: grid;
+    max-width: 100%;
 }
