--- a/src/components/PageWrapper/PageWrapper.scss
+++ b/src/components/PageWrapper/PageWrapper.scss
@@ -25,6 +25,7 @@
         background-color: $white;
         height: 100vh;
         padding: $spacing-048 $spacing-032;
+        max-width: 400px;
         .heading {
             margin-bottom: $spacing-024;
             display: flex;
@@ -33,6 +34,7 @@
             flex-wrap: wrap;
             gap: $spacing-016;
             font-size: 25px;
+            max-width: 100%;
             svg {
                 cursor: pointer;
             }
